--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - 80:8080
     environment:
       - PGUSER=${PGUSER:-totoro}
-      - PGPASSWORD=${PGPASSWORD:?database password not set}
+      - PGPASSWORD=${PGPASSWORD:-password}
       - PGHOST=${PGHOST:-db}
       - PGPORT=${PGPORT:-26257}
       - PGDATABASE=${PGDATABASE-mydb}
